--- a/android/build.gradle
+++ b/android/build.gradle
@@ -68,11 +68,37 @@ repositories {
     }
     google()
     jcenter()
+
+
+    maven { url 'https://maven.google.com' }
+    // Add Appodeal repository
+    maven { url "https://artifactory.appodeal.com/appodeal" }
+    // Add Mopub repository
+    // https://github.com/mopub/mopub-android-sdk/issues/341#issuecomment-521563460
+    maven {
+        url "https://s3.amazonaws.com/moat-sdk-builds"
+        content {
+            includeGroupByRegex "com\\.moat.*"
+        }
+    }
 }
 
 dependencies {
     //noinspection GradleDynamicVersion
     implementation 'com.facebook.react:react-native:+'  // From node_modules
+
+    implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+
+    // Stack ConsentManager (required for requesting Consent from European Users)
+    implementation 'com.explorestack:consent:1.0.1'
+    implementation 'com.google.android.gms:play-services-ads-identifier:15.0.0'
+
+    implementation 'com.appodeal.ads:sdk:2.6.3.0'
+    implementation 'com.appodeal.ads.sdk.networks:a4g:2.6.0.1'    // optional network
+    implementation 'com.appodeal.ads.sdk.networks:flurry:2.6.0.1' // optional network
+    implementation 'com.appodeal.ads.sdk.networks:mopub:2.6.0.1'  // optional network
+    implementation 'com.appodeal.ads.sdk.networks:fyber:2.6.0.1'  // optional network
 }
 
 def configureReactNativePom(def pom) {
